fix alignment of text and images in inventory items

--- a/src/styles/InventoryItem.css
+++ b/src/styles/InventoryItem.css
@@ -28,7 +28,6 @@
 
     .InventoryItem-text {
       margin-left: 0.5em;
-      margin-top: 0.5em;
     }
   }
 
@@ -37,6 +36,7 @@
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: flex-start;
+    align-items: center;
     cursor: pointer;
     padding: 2px 5px;
     margin: 1px 0;
@@ -56,6 +56,7 @@
     padding-left: 0.75em;
     opacity: 0.5;
     flex-shrink: 0;
+    align-self: flex-start;
   }
 
   &-glyph:not(:empty) {
